--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
-Package: thesisdown
-Title: An updated R Markdown thesis template using the bookdown package
-Version: 0.2.0.9000
+Package: sussexthesis
+Title: An updated Sussex R Markdown thesis template using the bookdown package
+Version: 0.0.1
 Authors@R: c(
     person("Chester", "Ismay", email = "chester.ismay@gmail.com", role = c("cre", "aut")),
-    person("Nick", "Solomon", email = "nick@nicksolomon.me", role = "aut"),
-    person("Shir", "Dekel", email = "shirdekel@yahoo.com.au", role = "ctb"))
-Description: Using the bookdown package and LaTeX and Word thesis templates from
-    Reed College, this package aims to encourage reproducible research using
+    person("Danielle", "Evans", email = "danielle.evans@sussex.ac.uk", role = "cre"))
+Description: sussexthesis uses the bookdown package and LaTeX and Word thesis templates from
+    Reed College to create a thesis consistent with the requirements of the University of Sussex. This package aims to encourage reproducible research using
     simple Markdown syntax while embedding all of the R code to produce plots
     and analyses as well.
-Maintainer: Chester Ismay <chester.ismay@gmail.com>
-Depends:
-    R (>= 3.2.0)
+Maintainer: Danielle Evans <danielle.evans@sussex.ac.uk>
 Imports: 
     dplyr,
     ggplot2,
